safari alignment fixing, px to rem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,16 +13,20 @@ body {
 #editorAndPluginVersionInfo {
     z-index: 1041;
     position: fixed;
-    padding: 0 15px;
     background-color: black;
     bottom: 0;
-    border-radius: 7px 7px 0 0;
-    margin-left: 5px
+    border-radius: 0.437rem 0.437rem 0 0;
+    margin-left: 0.312rem;
+    padding: 0 1rem;
 }
+
 #editorAndPluginVersionInfo > span {
     color: rgb(175, 175, 175);
-    font-size: 12px;
-}    
+    font-size: 0.75rem;
+}
+#versionsDivider {
+    margin: 0 0.3rem;
+}
 
 .pureInput {
     border-width: 0;
@@ -58,28 +62,26 @@ body {
 }
 
 .nav-border {
-    outline-width: 1px;
+    outline-width: 0.062rem;
     border-width: thick;
 }
 
 /*Main Containers*/
 div#sandboxContainer {
-    max-width: 70vw;
+    width: 70vw;
     position: fixed;
-    max-height: 100%;
+    height: 100vh;
 }
 
 div#controlsContainer {
     background-color: #fafafa;
-    max-width: 30vw;
-    min-width: 30vw;
-    min-height: 100vh;
+    width: 30%;
     float: right;
     visibility: hidden;
 }
 
 div.container-fluid {
-    padding: 0.5vw;
+    padding: 0.312rem
 }
 
 ::-webkit-scrollbar {
@@ -124,37 +126,38 @@ div.container-fluid {
 /*Navigation Panel*/
 .emitterTabContainer {
     margin-top: 1vh;
-    margin-bottom: 1px;
+    margin-bottom: 0.062rem;
 }
 
 fieldset {
-    border: 1px solid #ddd !important;
+    border: 0.062rem solid #ddd !important;
     margin: 0.5rem 0 0.5rem 0;
     xmin-width: 0;
-    padding: 0 10px 0 10px;
+    padding: 0 0.625rem 0 0.625rem;
     position: relative;
-    border-radius: 4px;
+    border-radius: 0.25rem;
     background-color: #f5f5f5;
 }
 
 fieldset > fieldset > legend {
-    font-size: 12px;
+    font-size: 0.75rem;
 }
 
 fieldset > fieldset > fieldset > legend {
-    font-size: 11px;
+    font-size: 0.687rem;
 }
 
 legend {
-    font-size: 13px;
+    font-size: 0.812rem;
     font-weight: bold;
     width: auto;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 2px 10px 3px 10px;
+    border: 0.062rem solid #ddd;
+    border-radius: 0.25rem;
+    padding: 0.125rem 0.625rem 0.187rem 0.625rem;
     background-color: #ffffff;
 }
 
+/*Accordion*/
 .accordion {
     margin-top: 0.5rem;
 }
@@ -163,9 +166,8 @@ legend {
     padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
-/*!*Accordion*!*/
 .accordion .card-header > p > a {
-    font-size: 18px;
+    font-size: 1.125rem;
     color: black;
 }
 
@@ -179,8 +181,12 @@ legend {
     content: "\f067";
 }
 
+.card-block > .col-md-12 {
+    padding: 0.5vw;
+}
+
 .option {
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 
 div.dropdown > a {
@@ -194,21 +200,26 @@ label.custom-file {
 
 input.btn-secondary {
     width: 100%;
-    border-radius: 3px;
+    border-radius: 0.187rem;
 }
 
 .btn {
     cursor: pointer;
 }
+
 .btn-file {
     width: 100%;
 }
 
 .close {
-    border-width: 10px;
+    border-width: 0.625rem;
     border-radius: 1vh;
 }
 
 #removeBgImage {
-    width:100%;
+    width: 100%;
+}
+
+#projectName {
+    margin-top: 1vh;
 }
